[package]
name = "flint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
actix-rt = "2.9.0"
dialoguer="*"
structopt = "0.3"
serde_json = "1.0"
colored = "2.0"
serenity="*"
rpassword="*"
tokio="*"
libc="*"
git2="*"
rand="*"